Thu Mar 27 15:39:43 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - UPGRADING: prefer calling "upsmon -c fsd" for usbhid-ups testing
 
Wed Mar 26 09:47:32 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - ChangeLog: trimmed everything previous to 2.2.0

Wed Mar 26 09:47:32 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - NEWS, UPGRADING: completion for 2.2.2 release

Tue Mar 25 20:09:12 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: partially revert r1395 (breaks the LIST
   command, that depends on reading replies line-by-line)

Tue Mar 25 18:47:41 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: performance improvement

Tue Mar 25 18:40:00 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: lower read timeout from the default (neon)
   value of 60 seconds to 10 seconds (to prevent the server from
   declaring the driver stale)

Fri Mar 21 09:59:23 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - replace "--with-lib" by "--with-dev" since we now always distribute
   the shared version of libupsclient. This change allow to build and
   install the static version of libupsclient, along with its helpers
   and manpages.

Mon Mar 24 15:19:33 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: fix memory leak

Sun Mar 23 20:20:57 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: handle all communications with the server
   through upscli_sendline/readline to prevent blocking on I/O
   calls when the server is not responding (while still allowing
   it a couple of seconds to reply)

Sun Mar 23 20:00:29 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups:
   - changes in the way we tell the UPS to shutdown
   - reformatted hidparser
   - the variable passed to the conversion functions in the HID-to-NUT
     mapping is now a double and not a long anymore (to maintain
     resolution for non-integer values)